--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "name": "selenium-webdriver",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
-    "test": "./node_modules/.bin/cucumber-js"
+    "selenium:server": "./node_modules/.bin/selenium",
+    "test:web": "./node_modules/.bin/cucumber-js tests/features/web-site/*.feature",
+    "test:api": "./node_modules/.bin/cucumber-js tests/features/api/*.feature"
   },
-  "author": "",
+  "author": "FM",
   "license": "ISC",
   "dependencies": {
     "@cucumber/cucumber": "^7.3.2",
-    "dotenv": "^16.0.0",
+    "axios": "^0.26.1",
+    "faker": "^5.5.3",
+    "selenium-grid-manager": "^1.1.5",
     "selenium-webdriver": "^4.1.1"
   }
 }
