--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@cucumber/cucumber": "^7.3.2",
     "axios": "^0.26.1",
+    "dotenv": "^16.0.0",
     "faker": "^5.5.3",
     "selenium-grid-manager": "^1.1.5",
     "selenium-webdriver": "^4.1.1"
