--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@cucumber/cucumber": "^7.3.2",
-    "@cucumber/pretty-formatter": "^1.0.0-alpha.2",
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "faker": "^5.5.3",
+    "fs-extra": "^10.1.0",
     "selenium-grid-manager": "^1.1.5",
     "selenium-webdriver": "^4.1.1"
   }
