--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BASE_URL=https://www7.rakqa.fr
+BASE_URL=https://preview.fr.shopping.rakuten.com
 DRIVER=mobile
 REGISTRED_USER=fmillane@yopmail.com
 REGISTRED_PASS=Rakuten2020
