update fast register tests

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BASE_URL=https://preview.fr.shopping.rakuten.com
+BASE_URL=https://www4.rakqa.fr
 DRIVER=mobile
 REGISTRED_USER=fmillane@yopmail.com
 REGISTRED_PASS=Rakuten2020
