--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-BASE_URL=https://www4.rakqa.fr
+BASE_URL=https://www7.rakqa.fr
 DRIVER=mobile
-REGISTRED_USER=fmillane@yopmail.com
+REGISTRED_USER=rakuten.quality@gmail.com
 REGISTRED_PASS=Rakuten2020
