add web service structure

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-BASE_URL=https://www4.rakqa.fr
+BASE_URL=https://www7.rakqa.fr
+WS_URL=https://ws7.rakqa.fr/restpublic
 DRIVER=mobile
 REGISTRED_USER=rakuten.quality@gmail.com
 REGISTRED_PASS=Rakuten2020
