--- a/jenkinsfile
+++ b/jenkinsfile
@@ -3,7 +3,7 @@ pipeline {
        label 'tools-qa'
     }
    parameters {
-      string(defaultValue: "develop", description: 'On which automation repository branch ?', name: 'BRANCH_NAME')
+      string(defaultValue: "master", description: 'On which automation repository branch ?', name: 'BRANCH_NAME')
       choice(name: 'RAKQA_ENV', choices: ['7', '1', '2', '3', '4', '5', '6', '8', '9', '10', '11'], description: 'on which environment ?')
       choice(name: 'SEND_REPORT', choices: ['no', 'yes'])
    } 
