--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 BASE_URL=https://www4.rakqa.fr
-DRIVER=chrome
+WS_URL=https://ws5.rakqa.fr
+DRIVER=firefox
 REGISTRED_USER=rakuten.quality@gmail.com
 REGISTRED_PASS=Rakuten2020
